# asr-finist

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  pyproject.toml
configs/streaming_acoustic/: config.pbtxt
configs/streaming_acoustic_trt/: config.pbtxt
docs/: performance_testing.md  performance_testing.ru.md  triton_inference_server.md  triton_inference_server.ru.md
examples/: finetune_example.ipynb
tone/: __init__.py  __main__.py  decoder.py  logprob_splitter.py  onnx_wrapper.py  pipeline.py  project.py
tone/demo/: __init__.py  read_audio.py  website.py
tone/demo/audio_examples/: audio_long.flac  audio_short.flac
tone/demo/static/: index.html
tone/nn/: __init__.py  model.py  torch_utils.py
tone/nn/modules/: __init__.py  conformer.py  conformer_blocks.py  feats.py  submodules.py
tone/scripts/: __init__.py  export.py
tone/training/: __init__.py  data_collator.py  model_wrapper.py
